deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  namespace: sample
spec:
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-go-api
        image: jvin911/janiths-public-repo:sample-go-api
  replicas: 3
  selector:
    matchLabels:
      app: sample-api
