service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: sample-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sample-api
