ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: sample
spec:
  rules:
  - host: sample-nginx.mytestcompany-domain.com
    http:
      paths:
      - backend:
          service:
            name: sample-service
            port:
              number: 80
        path: /
        pathType: Prefix
